# utsusu

./: Cargo.toml  LICENSE  README.md
examples/rust-script/: config.yml
examples/rust-script/files/: template.rs
examples/sample-directory/: config.yml
examples/sample-directory/files/: additional-script.rs  template.rs
examples/utsusu-template/: README.md  config.yml
examples/utsusu-template/files/: README.md  config.yml
examples/utsusu-template/files/files/: file.md
src/: lib.rs  template_config.rs  utils.rs
src/template_rendering/: mod.rs  single_file_render.rs
