[package]
name = "utsusu"
version = "0.1.0"
edition = "2024"
authors = ["Joe Ciskey <jciskey@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
description = "A straight-forward templating tool for directories and individual files"
repository = "https://github.com/jciskey/utsusu"
categories = ["command-line-utilities"]
keywords = ["template", "cli"]

[dependencies]
clap = { version = "4.5.42", features = ["env"] }
directories = "6.0.0"
globset = "0.4.16"
saphyr = "0.0.6"
tera = "1.20.0"

[[bin]]
name = "utsusu"
path = "src/bin/utsusu-cli/main.rs"
test = false
bench = false
